unpackaged/main/default/objects/fferpcore__ErpCommonObjectSettings__c/fferpcore__ErpCommonObjectSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the settings that determine the behavior of common objects or functionality affected by common objects.</description>
    <label>FDN Common Object Settings</label>
</CustomObject>