unpackaged/main/default/objects/fferpcore__ErpCommonObjectSettings__c/fields/fferpcore__AllowBillingDocumentLineReparenting__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__AllowBillingDocumentLineReparenting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that you can reparent billing document line items.</description>
    <inlineHelpText>Indicates that you can reparent billing document line items.</inlineHelpText>
    <label>Allow Billing Document Line Reparenting</label>
    <type>Checkbox</type>
</CustomField>