unpackaged/main/default/objects/fferpcore__ErpCommonObjectSettings__c/fields/fferpcore__DisableCreditTermsMergeValidation__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DisableCreditTermsMergeValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Foundations should prevent accounts from being merged if more than one of them has an account credit terms record.</description>
    <inlineHelpText>Indicates that you do not want to prevent accounts from being merged when more than one of them has an account credit terms record. This might result in accounts with more than one account credit terms record.</inlineHelpText>
    <label>Disable Credit Terms Merge Validation</label>
    <type>Checkbox</type>
</CustomField>