unpackaged/main/default/objects/fferpcore__ErpCommonObjectSettings__c/fields/fferpcore__TaxCalculationUsesBankersRounding__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxCalculationUsesBankersRounding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether tax values calculated on billing document line items are rounded using bankers (HALF-EVEN) rounding or HALF-UP rounding. FinancialForce applications use HALF-UP rounding as standard.</description>
    <inlineHelpText>Indicates whether tax values calculated on billing document line items are rounded using bankers (HALF-EVEN) rounding or HALF-UP rounding. FinancialForce applications use HALF-UP rounding as standard.</inlineHelpText>
    <label>Tax Calculation Uses Bankers Rounding</label>
    <type>Checkbox</type>
</CustomField>